[gd_scene load_steps=6 format=3 uid="uid://c1i48qdkrisvk"]

[ext_resource type="Script" uid="uid://dvagu8gslisua" path="res://Game/PawnRegistry/character_pawn.gd" id="1_7fod6"]
[ext_resource type="Script" uid="uid://dhdvxyoxg4m31" path="res://Game/Multiplayer/safe_multiplayer_synchronizer.gd" id="2_1pxof"]
[ext_resource type="Script" uid="uid://624kjj0em1a2" path="res://Game/GameInteractor/SyncNode.gd" id="2_274nk"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_7fod6"]

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_1pxof"]
properties/0/path = NodePath(".:position")
properties/0/spawn = true
properties/0/replication_mode = 2
properties/1/path = NodePath(".:rotation")
properties/1/spawn = true
properties/1/replication_mode = 2
properties/2/path = NodePath(".:id")
properties/2/spawn = true
properties/2/replication_mode = 2
properties/3/path = NodePath("DollNode:UID")
properties/3/spawn = true
properties/3/replication_mode = 2

[node name="CharacterPawn" type="Node3D"]
script = ExtResource("1_7fod6")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(0.311408, 0, 0, 0, 0.311408, 0, 0, 0, 0.311408, 0, 0, 0)
visible = false
mesh = SubResource("CapsuleMesh_7fod6")

[node name="DollNode" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("2_274nk")
metadata/_custom_type_script = "uid://624kjj0em1a2"

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
unique_name_in_owner = true
replication_config = SubResource("SceneReplicationConfig_1pxof")
public_visibility = false
script = ExtResource("2_1pxof")

[connection signal="tree_exiting" from="." to="." method="_on_tree_exiting"]
[connection signal="onNodeChanged" from="DollNode" to="." method="_on_doll_node_on_node_changed"]
